--- a/editor.html
+++ b/editor.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="assets/editor.css">
 </head>
 <body>
+    <h3 id="logText"></h3>
     <div id="arte" class="div_arte" >
         <div id="photo" class="div_photo">
             <img src="" alt="">
         </div>
     </div>
 </body>
+<script src="assets/js/editor.js"></script>
 </html>
