--- a/editor.html
+++ b/editor.html
@@ -10,7 +10,7 @@
 <body>
     <h3 id="logText"></h3>
     <div id="arte" class="div_arte" >
-        <div id="photo" class="div_photo">
+        <div id="photo" class="div_photo draggable">
             <img src="" alt="">
         </div>
     </div>
