--- a/editor.html
+++ b/editor.html
@@ -6,10 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arte Editor</title>
     <link rel="stylesheet" href="assets/editor.css">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
     <h3 id="logText"></h3>
     <div id="arte" class="div_arte" >
+        <div class="controls">
+            <span class="material-icons">edit</span>
+        </div>
         <div id="photo" class="div_photo draggable">
             <img src="" alt="">
         </div>
